--- a/code/package.json
+++ b/code/package.json
@@ -6,11 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@turf/buffer": "^5.1.5",
+    "@turf/centroid": "^6.0.2",
+    "@turf/collect": "^6.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "leaflet": "^1.7.1",
+    "leaflet-draw": "^1.0.4",
     "mapbox-gl": "^2.0.1",
     "morgan": "~1.9.1",
-    "mysql": "2.18.1"
+    "mysql": "2.18.1",
+    "react-leaflet": "^3.0.5",
+    "turf-area": "^3.0.12"
   }
 }
